# NixTool

./: README.md  flake.nix  nixtool.py  pyproject.toml  shell.nix
nixtool/: __main__.py  commands.py  disk_selector.py  host_selector.py  input_widget.py  instructions_widget.py  main.py  options_widget.py
