[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nixtool"
version = "0.1.0"
description = "CLI tool for managing flake based NixOS installations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual",
]

[project.scripts]
nixtool = "nixtool.__main__:main"

[tool.setuptools.packages.find]
where = ["."]